fix issue #32, now have to set vimMode = true to enable CM vim mode, cleaned up handling of inline editor esc key, fix cursor z-index, was made invisible by some CM css changes

--- a/styles/vimderbar.css
+++ b/styles/vimderbar.css
@@ -44,7 +44,9 @@ input.vimderbar-command:focus {
     background: rgb(211, 205, 105);
 }
 /* using admittedly insane selectors to avoid inline editor inheriting fat-cursor... made default color neutral */
-/* */
+.content .CodeMirror.cm-keymap-fat-cursor .CodeMirror-cursors {
+  z-index: 3;
+}
 .content .CodeMirror.cm-keymap-fat-cursor .CodeMirror-cursor {
     border-left: none;
     background: rgb(145, 145, 145);
